<resources>
    <string name="app_name">QR Code Scanner</string>
    <string name="btnStartScanning">START SCANNING</string>
    <string name="app_name_company">ioLab</string>

    <string name="title_activity_scanner">Scanner</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="auto_focus">Auto focus</string>
    <string name="use_flash">Use flash</string>
    <string name="last_scanned_code">LAST SCANNED CODE:</string>
    <string name="code_text_data">Code data: </string>
    <string name="barcode_text_result_empty">empty</string>
    <string name="navigation_drawer_open">Menu open</string>
    <string name="navigation_drawer_close">Menu close</string>
    <string name="nav_detail_description">Scan any bar and qr codes, save and share them</string>
    <string name="tab_one_title">Scanning</string>
    <string name="tab_two_title">History</string>
    <string name="scan_dialog_title">Scan result</string>
    <string name="scan_dialog_btn_save_result">Save result</string>
    <string name="scan_dialog_btn_cancel">Cancel</string>
    <string name="scan_dialog_btn_rescan">Rescan</string>
    <string name="toast_scan_cancel">Scanning canceled</string>
    <string name="splash_please_wait">Loading...</string>
    <string name="clear_history_db">Clear history</string>
    <string name="history_cleared">History cleared</string>
    <string name="history_is_empty">History is empty</string>
    <string name="splash_screen_alert_dialog">Error</string>
    <string name="splash_screen_alert_dialog_message">Camera is missing on your device. Sorry, can not proceed.</string>
    <string name="ok_button">OK</string>
    <string name="dummyStrCode">123456</string>
    <string name="dummyStrCodeFormat">EAN-13</string>
    <string name="dummyStrCodeDate">01.01.2000</string>
    <string name="history_delete_item">Delete</string>
    <string name="history_share">Share</string>
    <string name="share_text_start">This data was retrieved from scanned barcode:</string>
    <string name="share_text_codename">Code data:</string>
    <string name="share_text_codetype">Code type:</string>
    <string name="share_text_scandate">Scan date:</string>
    <string name="share_text_subject">Scanned code data</string>
    <string name="share_text_end">The barcode was scanned by ioLab QrCodeScanner application.
        Get it on http://play.google.com and be armed to scan barcodes by yourself.</string>
    <string name="select_action">Selected:</string>

    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="promt_to_scan">Place barcode into viewfinder to scan it.</string>
    <string name="select_one_item">Select only one item</string>
    <string name="deleted_count">Count of deleted items:</string>
    <string name="generated_code_image">Generated code image:</string>
    <string name="save_png">Save as PNG</string>
    <string name="save_jpg">Save as JPG</string>
    <string name="saved_as">Saved as</string>
    <string name="code_details_title">Code details</string>
    <string name="nav_scan_new_code">Scan new code</string>
    <string name="nav_share_recent_code">Share recent code</string>
    <string name="nav_history">History</string>
    <string name="nav_clear_history">Clear history</string>
    <string name="nav_about_application">About application</string>
    <string name="nav_about">About</string>

    <string name="nav_about_application_text">\n
        <b>Qr Code Scanner 1.0 </b> \n
        Scan any codes and share them. \n
        For questions and proposals please contact: \n
        <b>dmitriy.sknar@gmail.com</b>\n
    </string>
</resources>
