<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/colorPrimaryDark">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logo"
        android:adjustViewBounds="true"
        tools:ignore="ContentDescription"
        android:paddingTop="40dp"
        android:elevation="3dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorWhite" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_detail_description"
        android:textColor="@color/colorWhite"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/splash_please_wait"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:paddingTop="60dp"
        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_company"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:gravity="center_horizontal"
        android:paddingTop="60dp"
        android:textColor="@color/colorWhite" />
</LinearLayout>

