<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ioLab.qrCodeScanner.MainActivity"
    android:alignmentMode="alignBounds">


    <Button
        android:id="@+id/btnScanning"
        android:layout_height="80dp"
        android:layout_width="match_parent"
        android:background="@color/viewfinder_laser"
        android:layout_gravity="center"
        android:layout_alignParentBottom="true"
        android:text="@string/btnStartScanning"
        android:textColor="#FFFFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        android:focusable="false"
        />

    <LinearLayout
        android:id="@+id/camera_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/btnScanning"
        android:gravity="center_horizontal"
        >
        <CheckBox
            android:id="@+id/auto_focus_checkbox"
            android:text="@string/auto_focus"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:checked="true"
            />
        <CheckBox
            android:id="@+id/use_flash_checkbox"
            android:text="@string/use_flash"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:checked="false"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/code_text_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/camera_settings"
        android:gravity="center_horizontal"
        >
        <TextView
            android:id="@+id/barcode_value"
            android:text="@string/code_text_data"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            />
        <TextView
            android:id="@+id/barcode_text_result"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:maxHeight="80dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="100"
            android:layout_margin="3dp"
            android:layout_marginTop="10dp"
            android:text="@string/barcode_text_result_empty"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/scannedImage"
        android:layout_above="@id/code_text_result"
        android:contentDescription="regenerated code image"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/last_scanned_code"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
