<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/hist_lv_selector"
    android:orientation="horizontal"
    android:padding="5dp" >
    <LinearLayout
        android:id="@+id/thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="5dp"
        android:padding="3dp" >
        <ImageView
            android:id="@+id/list_image"
            android:contentDescription="@string/app_name"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/barcode" />
    </LinearLayout>
    <ImageView
        android:id="@+id/imageListViewArrow"
        android:contentDescription="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@mipmap/arrow" />
    <TextView
        android:id="@+id/tvCodeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/thumbnail"
        android:layout_marginLeft="15dp"
        android:layout_centerVertical="true"
        android:paddingBottom ="15dp"
        android:text="@string/dummyStrCode"
        android:textColor="#040404"
        android:textSize="16dp"
        android:textStyle="bold"
        android:typeface="sans" />
    <TextView
        android:id="@+id/tvCodeFormat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCodeName"
        android:layout_alignLeft="@+id/tvCodeName"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/dummyStrCodeFormat"
        android:textColor="#343434"
        android:textSize="12dp" />
    <TextView
        android:id="@+id/tvScanningDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCodeName"
        android:layout_toLeftOf="@+id/imageListViewArrow"
        android:paddingTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/dummyStrCodeDate"
        android:textColor="#343434"
        android:textSize="12dp" />
</RelativeLayout>