<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fr_scanning_emb_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.ioLab.qrCodeScanner.MainActivity"
    android:alignmentMode="alignBounds">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/last_scanned_code"
        android:textSize="22sp"
        android:gravity="center"
        android:layout_centerHorizontal="true"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/imageCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/colorBackground">
                <ImageView
                    android:id="@+id/scannedImage"
                    android:contentDescription="Scanned code image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxHeight="100dp"
                    android:scaleType="center"
                    android:layout_gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="8dp"/>
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:id="@+id/code_text_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/barcode_value"
                    android:text="@string/code_text_data"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_weight="0"
                    android:layout_gravity="start"
                    android:layout_margin="3dp"/>

                    <TextView
                        android:id="@+id/barcode_text_result"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_gravity="start"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:layout_weight="100"
                        android:layout_margin="3dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/barcode_text_result_empty"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
